--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
-            <h2>Jobaer Hossain</h2>
-            <p>I'm <span class="typed" data-typed-items="IT Enablement Specialist, Network Specialist, Server Specialist, Cloud Specialist"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <h2>Md. Jobaer Hossain</h2>
+            <p>I'm <span class="typed" data-typed-items="IT Enablement Specialist., Network Specialist., Server Specialist., Cloud Specialist."></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://www.facebook.com/jbhs.info/" target="_blank"><i class="bi bi-facebook"></i></a>
               <a href="https://www.linkedin.com/in/hsjobaerlisedu/" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -158,51 +158,6 @@
       </div>
 
     </section><!-- /About Section -->
-
-    <!-- Stats Section -->
-    <section id="stats" class="stats section">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-emoji-smile"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="57" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Happy Clients</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-journal-richtext"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="17" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-headset"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="67" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-          <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-people"></i>
-            <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="13" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hard Workers</p>
-            </div>
-          </div><!-- End Stats Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Stats Section -->
 
     <!-- Skills Section -->
     <section id="skills" class="skills section">
@@ -391,6 +346,12 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Education</h3>
 
               <div class="resume-item">
+                <h4>Post Graduate Diploma in Cyber Security</h4>
+                <h5>Oct 2025 - Present</h5>
+                <p><em>Institute of Continuing Education (AIUB), Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
                 <h4>Bachelor of Arts (Hon's)</h4>
                 <h5>July 2019 - June 2023</h5>
                 <p><em>National University of Bangladesh, Dhaka</em></p>
@@ -415,27 +376,39 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Professional Training</h3>
 
               <div class="resume-item">
+                <h4>Diploma in IT Support Management</h4>
+                <h5>Completion Date: September 2025</h5>
+                <p><em>Alison (Globally Recognized e-Learning Platform)</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>IT Support Professional</h4>
+                <h5>Completion Date: April 2024</h5>
+                <p><em>Grow with Google</em></p>
+              </div>
+
+              <div class="resume-item">
                 <h4>Koha Library Software for Smart Librarians</h4>
                 <h5>Completion Date: March 2024</h5>
                 <p><em>Sothik IT & Digital Solutions Bangladesh</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>IT Support Professional</h4>
-                <h5>Completion Date: February 2024</h5>
-                <p><em>Grow with Google</em></p>
+                <h4>Cisco Certified Network Associate</h4>
+                <h5>Completion Date: October 2023</h5>
+                <p><em>Packt (UK Based e-Learning Platform)</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>CCNA: Routing & Switching</h4>
-                <h5>Completion Date: October 2023</h5>
-                <p><em>One Sky Information Technology, Dhaka</em></p>
+                <h4>CompTIA A+ Core 2 (220-1102)</h4>
+                <h5>Completion Date: September 2023</h5>
+                <p><em>Packt (UK Based e-Learning Platform)</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>CompTIA A+</h4>
-                <h5>Completion Date: October 2023</h5>
-                <p><em>One Sky Information Technology, Dhaka</em></p>
+                <h4>CompTIA A+ Core 1 (220-1101)</h4>
+                <h5>Completion Date: August 2023</h5>
+                <p><em>Packt (UK Based e-Learning Platform)</em></p>
               </div>
             </div>
             <!-- End Professional Training -->
@@ -451,33 +424,33 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Professional Experience</h3>
 
               <div class="resume-item">
+                <h4>Chief Training Officer</h4>
+                <h5>July 2024 - Present</h5>
+                <p><em>Intrex Digital Learning Hub, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
                 <h4>Technical Trainer (Contracted)</h4>
-                <h5>September 2025 - Present</h5>
+                <h5>August 2023 - Present</h5>
+                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Principal Technical Trainer (Contracted)</h4>
+                <h5>August 2023 - Present</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
                 <h4>Network Engineer</h4>
-                <h5>April 2025 - Present</h5>
+                <h5>April 2025 - September 2025</h5>
                 <p><em>InComIT Solution, Dhaka</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>Subject Matter Expert, Networking</h4>
-                <h5>July 2024 - Present</h5>
-                <p><em>Intrex Digital Hub, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
                 <h4>Technical Instructor (Contracted)</h4>
                 <h5>August 2023 - September 2024</h5>
                 <p><em>IBCS Primax Software Bangladesh, Dhaka</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>Technical Trainer (Contracted)</h4>
-                <h5>August 2023 - September 2024</h5>
-                <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
@@ -649,6 +622,7 @@ Development</span> <i class="val">85%</i></span>
                 <div class="content">
                   <h4>Email Address</h4>
                   <p>info@hsjb.info</p>
+                  <p>enablement.tech@gmail.com</p>
                 </div>
               </div>
 
