--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
           <div class="col-lg-8 content">
             <h2>IT Enablement Specialist.</h2>
             <p class="py-3">
-              Motivated and technically skilled IT professional with hands-on experience in networking, system administration, and IT support. I bring a strong blend of theoretical knowledge and practical expertise, having held roles such as Support Engineer, System & Network Engineer, and IT Instructor over the course of my career.
-            </p>
+              Motivated and technically skilled IT professional with hands-on experience in networking, system administration, and IT support. I bring a strong blend of theoretical knowledge and practical expertise, having served as a Support Engineer, System & Network Engineer, IT Instructor, and Subject Matter Expert throughout my career. Over the years, I have built a strong foundation in designing, deploying, and optimizing IT infrastructures across diverse environments, with experience spanning both on-premises and cloud-based ecosystems. Known for my analytical mindset and structured problem-solving approach, I consistently collaborate with cross-functional teams to streamline operations, enhance system performance, and ensure seamless IT service delivery.            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -424,20 +423,20 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Professional Experience</h3>
 
               <div class="resume-item">
-                <h4>Chief Training Officer</h4>
-                <h5>July 2024 - Present</h5>
-                <p><em>Intrex Digital Learning Hub, Dhaka</em></p>
+                <h4>Executive - IT</h4>
+                <h5>November 2025 - Present</h5>
+                <p><em>One Entertainment Limited (Channel 1), Dhaka</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>Technical Trainer (Contracted)</h4>
+                <h4>External Technical Trainer</h4>
                 <h5>August 2023 - Present</h5>
                 <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>Principal Technical Trainer (Contracted)</h4>
-                <h5>August 2023 - Present</h5>
+                <h4>Principal Technical Trainer</h4>
+                <h5>August 2023 - November 2025</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
@@ -448,13 +447,13 @@ Development</span> <i class="val">85%</i></span>
               </div>
 
               <div class="resume-item">
-                <h4>Technical Instructor (Contracted)</h4>
+                <h4>External Technical Trainer</h4>
                 <h5>August 2023 - September 2024</h5>
                 <p><em>IBCS Primax Software Bangladesh, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
-                <h4>Support Engineer</h4>
+                <h4>Technical Support Engineer</h4>
                 <h5>June 2023 - April 2024</h5>
                 <p><em>One Sky Communications Limited, Dhaka</em></p>
               </div>
@@ -467,7 +466,7 @@ Development</span> <i class="val">85%</i></span>
 
               <div class="resume-item">
                 <h4>Polytechnic Industrial Attachment 2025</h4>
-                <h5>September 2025 - Present</h5>
+                <h5>September 2025 - November 2025</h5>
                 <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
