--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
@@ -131,7 +130,8 @@
           <div class="col-lg-8 content">
             <h2>IT Enablement Specialist.</h2>
             <p class="py-3">
-              Motivated and technically skilled IT professional with hands-on experience in networking, system administration, and IT support. I bring a strong blend of theoretical knowledge and practical expertise, having served as a Support Engineer, System & Network Engineer, IT Instructor, and Subject Matter Expert throughout my career. Over the years, I have built a strong foundation in designing, deploying, and optimizing IT infrastructures across diverse environments, with experience spanning both on-premises and cloud-based ecosystems. Known for my analytical mindset and structured problem-solving approach, I consistently collaborate with cross-functional teams to streamline operations, enhance system performance, and ensure seamless IT service delivery.            </p>
+              Motivated and technically skilled IT professional with hands-on experience in networking, system administration, and IT support. I bring a strong blend of theoretical knowledge and practical expertise, having served as a Support Engineer, System & Network Engineer, IT Instructor, and Subject Matter Expert throughout my career.
+            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -151,9 +151,16 @@
             <p class="py-3">
               I specialize in managing and maintaining Windows and Linux server environments, virtualization platforms, and enterprise network infrastructure. With strong expertise in network configuration, security, and troubleshooting, I also serve as a Subject Matter Expert and Network Engineer. I actively lead, mentor, and train technical teams, playing a key role in developing training frameworks and technical roadmaps for organizational success.
             </p>
+
+            <!-- Resume Download Button -->
+            <div class="text-center mt-4">
+              <a href="https://flowcv.com/resume/ropwvvqmv0m0" class="resume-download-btn" download target="_blank">
+                  <i class="bi bi-download"></i> Download Resume
+              </a>
+          </div>
+            <!-- End Resume Download Button -->
           </div>
         </div>
-
       </div>
 
     </section><!-- /About Section -->
