Make some changes in resume section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Md. Jobaer Hossain</h2>
-            <p>I'm <span class="typed" data-typed-items="IT Enablement Specialist., Network Specialist., Server Specialist., Cloud Specialist."></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm <span class="typed" data-typed-items="IT Enablement Specialist., Network Specialist., System Specialist., Technical Trainer."></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://www.facebook.com/jbhs.info/" target="_blank"><i class="bi bi-facebook"></i></a>
               <a href="https://www.linkedin.com/in/hsjobaerlisedu/" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -352,12 +352,6 @@ Development</span> <i class="val">85%</i></span>
               <h3 class="resume-title">Education</h3>
 
               <div class="resume-item">
-                <h4>Post Graduate Diploma in Cyber Security</h4>
-                <h5>Oct 2025 - Present</h5>
-                <p><em>Institute of Continuing Education (AIUB), Dhaka</em></p>
-              </div>
-
-              <div class="resume-item">
                 <h4>Bachelor of Arts (Hon's)</h4>
                 <h5>July 2019 - June 2023</h5>
                 <p><em>National University of Bangladesh, Dhaka</em></p>
@@ -380,12 +374,6 @@ Development</span> <i class="val">85%</i></span>
             <!-- Professional Training -->
             <div data-aos="fade-up" data-aos-delay="200">
               <h3 class="resume-title">Professional Training</h3>
-
-              <div class="resume-item">
-                <h4>Diploma in IT Support Management</h4>
-                <h5>Completion Date: September 2025</h5>
-                <p><em>Alison (Globally Recognized e-Learning Platform)</em></p>
-              </div>
 
               <div class="resume-item">
                 <h4>IT Support Professional</h4>
@@ -419,6 +407,24 @@ Development</span> <i class="val">85%</i></span>
             </div>
             <!-- End Professional Training -->
 
+            <!-- Certifications & Accreditation -->
+            <div data-aos="fade-up" data-aos-delay="200">
+              <h3 class="resume-title">Certifications & Accreditation</h3>
+
+              <div class="resume-item">
+                <h4>IT Support Service, Level - 3</h4>
+                <h5>Issue Date: December  2025</h5>
+                <p><em>National Skills Development Authority (NSDA)</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>IT Support Service, Level - 4</h4>
+                <h5>Issue Date: December  2025</h5>
+                <p><em>National Skills Development Authority (NSDA)</em></p>
+              </div>
+            </div>
+            <!-- Certifications & Accreditation -->
+
           </div>
           <!-- End Left Column -->
 
@@ -436,18 +442,6 @@ Development</span> <i class="val">85%</i></span>
               </div>
 
               <div class="resume-item">
-                <h4>External Technical Trainer</h4>
-                <h5>August 2023 - Present</h5>
-                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
-              </div>
-
-              <div class="resume-item">
-                <h4>Principal Technical Trainer</h4>
-                <h5>August 2023 - November 2025</h5>
-                <p><em>One Sky Information Technology, Dhaka</em></p>
-              </div>
-
-              <div class="resume-item">
                 <h4>Network Engineer</h4>
                 <h5>April 2025 - September 2025</h5>
                 <p><em>InComIT Solution, Dhaka</em></p>
@@ -455,8 +449,20 @@ Development</span> <i class="val">85%</i></span>
 
               <div class="resume-item">
                 <h4>External Technical Trainer</h4>
+                <h5>August 2023 - Present</h5>
+                <p><em>IT Training School, Police Telecom Organization, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>External Technical Trainer</h4>
                 <h5>August 2023 - September 2024</h5>
                 <p><em>IBCS Primax Software Bangladesh, Dhaka</em></p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Principal Technical Trainer</h4>
+                <h5>August 2023 - November 2025</h5>
+                <p><em>One Sky Information Technology, Dhaka</em></p>
               </div>
 
               <div class="resume-item">
