--- a/blog-04.html
+++ b/blog-04.html
@@ -149,11 +149,11 @@
               </div>
 
               <div class="d-flex justify-content-between align-items-center mt-5">
-                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back to Blog Feed</a>
+                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back</a>
                 <div class="social-links d-flex gap-3">
-                   <a href="#" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-linkedin"></i></a>
-                   <a href="#" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-twitter-x"></i></a>
-                   <a href="#" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-share"></i></a>
+                   <a href="#" class="share-linkedin" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-linkedin"></i></a>
+                   <a href="#" class="share-twitter" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-twitter-x"></i></a>
+                   <a href="#" class="share-general" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-share"></i></a>
                 </div>
               </div>
 
