--- a/blog-26.html
+++ b/blog-26.html
@@ -93,7 +93,7 @@
                 <span class="me-4"><i class="bi bi-clock"></i> 45 Min Read</span>
               </div>
 
-              <h2 class="mb-4">Microsegmentation and Network Isolation: Limiting the Blast Radius</h2>
+              <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Microsegmentation and Network Isolation: Limiting the Blast Radius</h2>
               
               <div class="content">
                 <p class="lead">In traditional network design, once an attacker breaches the perimeter, they often find a "flat" internal network where lateral movement is trivial. In 2026, the strategy has shifted from protecting the border to isolating every individual workload.</p>
@@ -144,7 +144,12 @@
               </div>
 
               <div class="d-flex justify-content-between align-items-center mt-5">
-                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back to Blog Feed</a>
+                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back</a>
+                <div class="social-links d-flex gap-3">
+                   <a href="#" class="share-linkedin" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-linkedin"></i></a>
+                   <a href="#" class="share-twitter" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-twitter-x"></i></a>
+                   <a href="#" class="share-general" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-share"></i></a>
+                </div>
               </div>
 
             </div>
