--- a/blog-24.html
+++ b/blog-24.html
@@ -88,7 +88,7 @@
                 <span class="me-4"><i class="bi bi-clock"></i> 22 Min Read</span>
               </div>
 
-              <h2 class="mb-4">Zero Trust Networking: Redefining Security in a Perimeter-Less World</h2>
+              <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Zero Trust Networking: Redefining Security in a Perimeter-Less World</h2>
               
               <div class="content">
                 <p class="lead">The traditional "castle-and-moat" security strategy is dead. In an era of remote work, cloud migration, and sophisticated cyber threats, the internal network is no longer a "trusted" zone. Enter Zero Trust: the philosophy of "Never Trust, Always Verify."</p>
@@ -114,7 +114,12 @@
               </div>
 
               <div class="d-flex justify-content-between align-items-center mt-5">
-                <a href="blog.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back to Blog Feed</a>
+                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back</a>
+                <div class="social-links d-flex gap-3">
+                   <a href="#" class="share-linkedin" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-linkedin"></i></a>
+                   <a href="#" class="share-twitter" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-twitter-x"></i></a>
+                   <a href="#" class="share-general" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-share"></i></a>
+                </div>
               </div>
 
             </div>
