--- a/blog-25.html
+++ b/blog-25.html
@@ -94,7 +94,7 @@
                 <span class="me-4"><i class="bi bi-clock"></i> 40 Min Read</span>
               </div>
 
-              <h2 class="mb-4">Network Security in 2026: Threats, Tools, and Best Practices</h2>
+              <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Network Security in 2026: Threats, Tools, and Best Practices</h2>
               
               <div class="content">
                 <p class="lead">In 2026, the concept of a static "secure perimeter" has been completely dismantled. The explosion of hybrid cloud environments and edge computing has forced a radical transformation in how we perceive and implement network defense.</p>
@@ -148,7 +148,12 @@
               </div>
 
               <div class="d-flex justify-content-between align-items-center mt-5">
-                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back to Blog Feed</a>
+                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back</a>
+                <div class="social-links d-flex gap-3">
+                   <a href="#" class="share-linkedin" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-linkedin"></i></a>
+                   <a href="#" class="share-twitter" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-twitter-x"></i></a>
+                   <a href="#" class="share-general" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-share"></i></a>
+                </div>
               </div>
 
             </div>
