--- a/blog-27.html
+++ b/blog-27.html
@@ -93,7 +93,7 @@
                 <span class="me-4"><i class="bi bi-clock"></i> 50 Min Read</span>
               </div>
 
-              <h2 class="mb-4">AI in Network Security: Smarter Detection and Faster Response</h2>
+              <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">AI in Network Security: Smarter Detection and Faster Response</h2>
               
               <div class="content">
                 <p class="lead">As network complexity scales exponentially, human-led security operations centers (SOCs) are facing an impossible task. In 2026, Artificial Intelligence is no longer just a buzzword—it is the backbone of modern network defense, enabling real-time detection and autonomous mitigation.</p>
@@ -142,7 +142,12 @@
               </div>
 
               <div class="d-flex justify-content-between align-items-center mt-5">
-                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back to Blog Feed</a>
+                <a href="blogs.html" class="btn-resume-style"><i class="bi bi-arrow-left"></i> Back</a>
+                <div class="social-links d-flex gap-3">
+                   <a href="#" class="share-linkedin" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-linkedin"></i></a>
+                   <a href="#" class="share-twitter" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-twitter-x"></i></a>
+                   <a href="#" class="share-general" style="color: var(--accent-color); font-size: 22px;"><i class="bi bi-share"></i></a>
+                </div>
               </div>
 
             </div>
